--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh" translatable="false">Refresh</string>
     <string name="title_activity_movie_detail">MovieDetailActivity</string>
+    <string name="preference_catalogue_name">Sort preference</string>
+    <string name="preference_list_name">Sort movies by</string>
+    <string name="preference_sort_key">PREF_SORT_KEY</string>
+    <string name="preference_sort_default">popularity.desc</string>
 </resources>
